[package]
name = "bk"
version = "0.4.2"
authors = ["James Campos <james.r.campos@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Terminal Epub reader"
keywords = ["ebook", "epub"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/aeosynth/bk"

[dependencies]
anyhow = "1"
argh = "0"
crossterm = "0"
ron = "0"
roxmltree = "0"
serde = "1"
unicode-width = "0"

[dependencies.zip]
version = "0"
default-features = false
features = ["deflate"]
