[package]
name = "bk"
version = "0.6.0"
authors = ["James Campos <james.r.campos@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Terminal Epub reader"
keywords = ["ebook", "epub"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/aeosynth/bk"

[dependencies]
argh = "^0.1"
crossterm = "^0.22"
ron = "^0.7"
roxmltree = "^0.14"
serde = "^1.0"
unicode-width = "^0.1"

[dependencies.zip]
version = "^0.5"
default-features = false
features = ["deflate"]
